fix: modified the size of R1 auto-advance on small screen 430px

--- a/css/tournament.css
+++ b/css/tournament.css
@@ -491,7 +491,7 @@ body {
     }
 
     .bye-label {
-        font-size: 0.55em;
+        font-size: 0.30em;
         padding: 1px 3px;
         left: 4px;
     }
